fix sidebar z-index

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -17,6 +17,7 @@
   background: #0c5582;
   color: #fff;
   transition: left 0.5s ease-in;
+  z-index: 1;
 
   &.collapsed {
     left: 0;
